--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1 class="text-layout">hola mundo</h1>
-<button pButton type="button" label="Search" icon="pi pi-search" iconPos="right" class="p-button-text"></button>
+<app-menu></app-menu>
+
+<router-outlet></router-outlet>
