--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -78,7 +78,7 @@
             </li>
             <hr>
             <li>
-                4. {{fechaHoy | date}}
+                4. {{fechaHoy | date: 'long': '': 'es-AR'}}
             </li>
            </ul>
         </p-card>
