--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -3,7 +3,7 @@
   <p>Pipes incluídos en Angular ((@angular/common))</p>
 </div>
 <div class="grid">
-  <div class="col col-md-12">
+  <div class="col-12 md:col-12 lg:col-6">
     <p-fieldset legend="I18nSelectPipe" [toggleable]="true">
       <p>
         Hola {{ nombre }}, es un placer {{ genero | i18nSelect : pipeMap }} a
@@ -19,7 +19,7 @@
       ></button>
     </p-fieldset>
   </div>
-  <div class="col col-md-12">
+  <div class="col-12 md:col-12 lg:col-6">
     <p-fieldset legend="I18nPluralPipe" [toggleable]="true">
       <p>Actualmente {{ clientes.length | i18nPlural : pluralMap }}</p>
       <button
@@ -30,6 +30,49 @@
         class="p-button-outlined p-button-secondary"
         (click)="eliminarCliente()"
       ></button>
+    </p-fieldset>
+  </div>
+  <div class="col-12 md:col-6 lg:col-12">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <h2>Arreglo original</h2>
+      <pre>{{clientes}}</pre>
+      <hr>
+      <h2>Arreglo con slice</h2>
+      <pre>{{clientes | slice:0}}</pre>
+      <!--Muestra los valores desde el 0 a el 2 no incluído, el primer valor siempre es inclusivo-->
+      <pre>{{clientes | slice:0:4}}</pre>
+      <pre>{{clientes | slice:0:3}}</pre>
+      <pre>{{clientes | slice:1:3}}</pre>
+      <pre>{{clientes | slice:2:4}}</pre>
+      <hr>
+    </p-fieldset>
+  </div>
+  <div class="col-12 md:col-6 lg:col-6">
+    <p-fieldset legend="Key Value Pipe" [toggleable]="true">
+      <ul>
+        <!--Cuando lo imprimimos ordena alfabeticamente las propiedades-->
+        <li *ngFor="let item of persona |keyvalue">{{item | json}}</li>
+      </ul>
+      <ul>
+        <!--Cuando lo imprimimos ordena alfabeticamente las propiedades-->
+        <li *ngFor="let item of persona | keyvalue"><b>{{item.key | titlecase}}</b>: {{item.value}}</li>
+      </ul>
+    </p-fieldset>
+  </div>
+  <div class="col-12 md:col-6 lg:col-6">
+    <p-fieldset legend="Json Pipe" [toggleable]="true">
+      <pre>{{heroes | json}}</pre>
+    </p-fieldset>
+  </div>
+  <div class="col-12 md:col-6 lg:col-12">
+    <p-fieldset legend="Async Pipe" [toggleable]="true">
+      <h3>Observable..</h3>
+      <pre>{{losdiezprimeros | async}}</pre>
+      <!--miPromesa | async = al valor de la promesa-->
+      <h3
+      *ngIf="!(miPromesa | async)"
+      >Resolviendo promesa..</h3>
+      <pre>{{miPromesa | async}}</pre>
     </p-fieldset>
   </div>
 </div>
