--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,46 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+  <h1>Pipes personalizados</h1>
+  <p>Pipes creados por {{ texto | mayusculas : estaEnMayus }}</p>
+</div>
+
+<!--Toolbar-->
+<p-toolbar>
+  <div class="p-toolbar-group-left">Hola</div>
+  <div class="p-toolbar-group-right">
+    <button
+      pButton
+      pRipple
+      type="button"
+      label="Convertir"
+      class="p-button-raised p-button-secondary"
+      (click)="convertirAMayusc()"
+    ></button>
+
+    <p-button icon="pi pi-sort-alt" label="Por nombre"></p-button>
+    <p-button icon="pi pi-sort-alt" label="Por color" styleClass="p-button-success"></p-button>
+    <p-button icon="pi pi-sort-alt" label="Valores" styleClass="p-button-danger"></p-button>
+  </div>
+</p-toolbar>
+
+<!--Table-->
+
+<div class="grid">
+  <div class="col mt-1">
+    <p-table [value]="heroes" [tableStyle]="{'min-width': '50rem'}">
+      <ng-template pTemplate="header">
+          <tr>
+              <th>Nombre</th>
+              <th>¿Vuela?</th>
+              <th>Color</th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-heroes>
+          <tr>
+              <td>{{heroes.nombre}}</td>
+              <td>{{heroes.vuela | vuela}}</td>
+              <td>{{heroes.color | color}}</td>
+          </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
