--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -16,9 +16,9 @@
       (click)="convertirAMayusc()"
     ></button>
 
-    <p-button icon="pi pi-sort-alt" label="Por nombre"></p-button>
-    <p-button icon="pi pi-sort-alt" label="Por color" styleClass="p-button-success"></p-button>
-    <p-button icon="pi pi-sort-alt" label="Valores" styleClass="p-button-danger"></p-button>
+    <p-button icon="pi pi-sort-alt" label="Por nombre" (onClick)="ordenar('nombre')"></p-button>
+    <p-button icon="pi pi-sort-alt" label="Por color" (onClick)="ordenar('color')" styleClass="p-button-success"></p-button>
+    <p-button icon="pi pi-sort-alt" label="Vuela" (onClick)="ordenar('vuela')" styleClass="p-button-danger"></p-button>
   </div>
 </p-toolbar>
 
@@ -26,12 +26,36 @@
 
 <div class="grid">
   <div class="col mt-1">
-    <p-table [value]="heroes" [tableStyle]="{'min-width': '50rem'}">
+    <p-table [value]="heroes |ordenar:ordenarPor" [tableStyle]="{'min-width': '50rem'}">
       <ng-template pTemplate="header">
           <tr>
               <th>Nombre</th>
               <th>¿Vuela?</th>
               <th>Color</th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-heroes>
+          <tr>
+              <td>{{heroes.nombre}}</td>
+              <td>{{heroes.vuela | vuela}}</td>
+              <td>{{heroes.color | color}}</td>
+          </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</div>
+
+<!--Table Prime NG-->
+
+<div class="grid">
+  <div class="col mt-1">
+    <!--Slice en cero para enviarle una copia del arreglo sin ser modificado-->
+    <p-table [value]="heroes | slice:0" [tableStyle]="{'min-width': '50rem'}">
+      <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="nombre" style="width:20%">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
+            <th pSortableColumn="vuela" style="width:20%">¿Vuela? <p-sortIcon field="vuela"></p-sortIcon></th>
+            <th pSortableColumn="color" style="width:20%">Color <p-sortIcon field="color"></p-sortIcon></th>
           </tr>
       </ng-template>
       <ng-template pTemplate="body" let-heroes>
